2005-11-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/microtek2.desc: Fixed "unmaintained"
	  marker. Added Microtek Scanmaker V6UPL (bug #302464).
	* tools/check-usb-chip.c: Added detection of rts8822l-01h chipset
	  (patch from Jonathan Bravo Lopez <JKD@JKDSoft.cjb.net>).

2005-11-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/epkowa.desc: Disabled man page link
	  (points to nowhere). Bug #302463.
	* doc/descriptions/unsupported.desc: Added Canon PIXMA MP130.
	* doc/sane-hp.man doc/sane-microtek2.man: Fixed links to ppscsi.

2005-11-02  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* sanei/sanei_usb.c: Fixed output of transfer buffer for 
	  usb_read_bulk in OS/2.
	* backend/snapscan.c backend/snapscan-scsi.c: Fixes for Benq 5000
	* backend/snapscan-usb.c: Avoid recursive calls of usb_sense_handler

2005-11-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_usb.c: Added support for detecting vendor and
	  product id with FreeBSD kernel scanner driver (based on patch in
	  FreeBSD ports).
	* README.freebsd: Updated information about USB scanners.

2005-10-31  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-scsi.c backend/snapscan.h
	  backend/snapscan-options.c doc/descriptions/snapscan.desc:
	  Distinguish between 5000/5000E/5000U
	* backend/snapscan-sources.c: Enable deinterlacer for 5000E/5000U
	  for 1200 DPI
	* backend/snapscan.conf: Fix names for 5000/5000E/5000U

2005-10-30  Giuseppe Sacco <eppesuig@debian.org>

	* po/*it.po: Updated italian translation

2005-10-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/artec_eplus48u.conf
	  doc/descriptions/artec_eplus48u.desc: Added support for Trust
	  240H Easy Webscan Gold to artec_eplus48u backend.
	* Makefile.in acinclude.m4 configure configure.in
	  backend/Makefile.in frontend/Makefile.in lib/Makefile.in
	  sanei/Makefile.in tools/Makefile.in: 